--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-helmet": "^5.2.1",
-        "react-scripts": "^3.4.0",
+        "react-scripts": "^3.4.1",
         "react-typing-animation": "^1.6.2",
         "typeface-nunito": "0.0.72"
     },
     "devDependencies": {
         "prettier": "^1.17.1",
+        "react-dev-utils": "^10.2.1",
         "webpack": "^4.41.5",
         "webpack-cli": "^3.3.10"
     },
